chore:update subcontext tree structure and add readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-context",
+  "name": "vue-contextmenu",
   "version": "1.0.0",
   "main": "index.js",
   "author": "mengdaoshizhongxinyang",
