--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "vue-contextmenu",
-  "version": "1.0.0",
+  "name": "contextmenu-vue",
+  "version": "1.0.1",
   "main": "index.js",
-  "author": "mengdaoshizhongxinyang",
+  "author": "canxiao",
   "license": "MIT",
   "scripts": {
     "test": "vue serve ./test/main.js",
     "build": "vue-cli-service build --target lib --name contextmenu index.js"
   },
   "dependencies": {
+    
+  },
+  "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "core-js": "^3.6.5",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "vue": "^2.6.12",
