--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "contextmenu-vue",
-  "version": "1.0.1",
+  "name": "contextmenu-vue-next",
+  "version": "1.0.0",
+  "description": "contextmenu developed by vue3.0",
   "main": "index.js",
-  "author": "canxiao",
-  "license": "MIT",
   "scripts": {
-    "test": "vue serve ./test/main.js",
+    "test": "vue-cli-service serve ./test/main.js",
     "build": "vue-cli-service build --target lib --name contextmenu index.js"
   },
-  "dependencies": {
-    
-  },
+  "keywords": [
+    "vue3",
+    "contextmenu"
+  ],
+  "author": "mengdaoshizhongxinyang",
+  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.6",
-    "@vue/cli-service": "^4.5.6",
-    "babel-plugin-import": "^1.13.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12"
+    "@vue/babel-plugin-jsx": "^1.0.0-rc.5",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-typescript": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.4",
+    "less": "^3.13.0",
+    "less-loader": "^7.1.0",
+    "typescript": "^4.1.3",
+    "vue": "^3.0.4"
   }
 }
